--- a/bedrock/foundation/templates/foundation/annualreport/2009/a-competitive-world.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/a-competitive-world.html
@@ -22,7 +22,7 @@
     {% trans
       speed="https://blog.mozilla.org/blog/2010/11/10/fasten-your-seatbelts-latest-firefox-4-beta-boosts-speed-in-the-browser/"
     %}
-      We've made <a href="{{ speed }}" target="_blank">dramatic speed and performance
+      We've made <a href="{{ speed }}">dramatic speed and performance
       advancements</a> across the
       board in Firefox 4. Everything from startup time to page load speed to
       graphics and JavaScript performance are screaming fast in Firefox 4 due to
@@ -52,7 +52,7 @@
     seamless Web experience across desktop and mobile devices. Firefox Sync
     gives us access to our bookmarks, browser history, saved passwords and
     recently open browser tabs, no matter where we are. Early adopters can check
-    out the <a href="{{ beta }}" target="_blank">most recent beta</a>; general
+    out the <a href="{{ beta }}">most recent beta</a>; general
     consumers should wait until we get to a final release.{% endtrans %}</p>
 
   <p>{% trans %}In addition, Mozilla plays a key role in pushing the industry to
@@ -76,7 +76,7 @@
       localize and evangelize Firefox, and we've worked to expand/increase the
       ways that all Firefox users can participate in making Firefox better. With
       Firefox 4 Beta, we introduced a <a
-        href="{{ feedback }}" target="_blank">Feedback Add-on</a> from Mozilla
+        href="{{ feedback }}">Feedback Add-on</a> from Mozilla
       Labs Test Pilot, which
       lets people opt-in to take part in anonymous studies that help us make
       Firefox a better experience. This addition encourages feedback and gives
@@ -84,7 +84,7 @@
       participate in Test Pilot studies and have provided hundreds of thousands
       of pieces of feedback about Firefox 4 so far. Mozilla also recently launched
       a community care program called <a
-        href="{{ awesome }}" target="_blank">"Army of Awesome"</a> to enable
+        href="{{ awesome }}">"Army of Awesome"</a> to enable
       Firefox users to respond to each other and
       answer support questions on Twitter. In the first couple of weeks,
       hundreds of volunteers have already begun responding to thousands of user
