--- a/bedrock/foundation/templates/foundation/annualreport/2009/broadening-our-scope.html
+++ b/bedrock/foundation/templates/foundation/annualreport/2009/broadening-our-scope.html
@@ -37,9 +37,9 @@
           to provide people with products that embody Mozilla values of openness,
           flexibility, and the freedom to innovate, just as we do for the desktop
           Web. One important step is making Firefox available for mobile devices.
-          We released <a href="{{ maemo }}" target="_blank">Firefox on the Maemo (now known as Meego)
+          We released <a href="{{ maemo }}">Firefox on the Maemo (now known as Meego)
           platform</a> in Jan. of 2010.
-          <a href="{{ android }}" target="_blank">Firefox for the Android operating system</a>
+          <a href="{{ android }}">Firefox for the Android operating system</a>
           is in beta now and will be available in a few months.{% endtrans %}</p>
 
       <p>{% trans %}Firefox 4 for mobile phones is a compelling product for both users and
@@ -57,9 +57,9 @@
           %}
           We also created "Firefox Home" -- an app for the iphone that brings a
           range of useful Firefox information and features to iphone users.
-          <a href="{{ home }}" target="_blank">Firefox Home was released in July of 2010</a>
+          <a href="{{ home }}">Firefox Home was released in July of 2010</a>
           and was recently selected as a top 10 must-have iphone app by
-          <a href="{{ nytimes }}" target="_blank">the New York Times</a>.
+          <a href="{{ nytimes }}">the New York Times</a>.
           (Note that Firefox Home is <strong>not</strong> a full browser for
           the iphone; Apple forbids
           development of such a product in the terms of its software developer
@@ -110,7 +110,7 @@
           %}
           It's important for the future to see the positive characteristics of
           apps and app stores integrated with the great traits of the Web. To do
-          this we've <a href="{{ proto }}" target="_blank">designed a prototype of an Open Web App
+          this we've <a href="{{ proto }}">designed a prototype of an Open Web App
           ecosystem</a>: this includes a system design, technical documentation
           and examples of what such a system would look like and work like.
         {% endtrans %}
@@ -150,7 +150,7 @@
         set of experiments to figure out how to implement this idea, with
         experiments focused on sharing, identity, social contacts, and encrypted
         syncing of data among various machines. For example,
-        <a href="{{ f1 }}" target="_blank">F-1 is a browser extension</a>
+        <a href="{{ f1 }}">F-1 is a browser extension</a>
         that allows you to share links from any webpage
         in a fast and fun way.
         {% endtrans %}
@@ -198,17 +198,17 @@
           empowerment to other aspects of online life. In 2010 we've focused on
           education, and making more audio, visual and international content
           possible.
-          <a href="{{ webcraft }}" target="_blank">Peer-to-Peer University School of Webcraft</a>
-          and our <a href="{{ festival }}" target="_blank">Drumbeat Festival</a>
+          <a href="{{ webcraft }}">Peer-to-Peer University School of Webcraft</a>
+          and our <a href="{{ festival }}">Drumbeat Festival</a>
           explore a variety of ways that educational possibilities
           can be broadened through collaborative online learning. The
-          <a href="{{ movies }}" target="_blank">Web-Made-Movies project</a>
+          <a href="{{ movies }}">Web-Made-Movies project</a>
           demonstrates how the open technologies of the Web can
           enhance video content. The
-          <a href="{{ subtitles }}" target="_blank">Universal Subtitles project</a>
+          <a href="{{ subtitles }}">Universal Subtitles project</a>
           provides an open, collaborative way for people
           to add subtitles in multiple languages to any content. We've also set up
-          a <a href="{{ fund }}" target="_blank">Drumbeat Open Web Fund</a>
+          a <a href="{{ fund }}">Drumbeat Open Web Fund</a>
           which gives people a
           chance to donate and show their support for Mozilla's efforts to expand
           into these new areas.
