--- a/bedrock/teach/templates/teach/smarton/tracking.html
+++ b/bedrock/teach/templates/teach/smarton/tracking.html
@@ -61,7 +61,7 @@
       <figure class="video">
         <div class="video-wrap">
           <p class="video-frame">
-            <a class="video-open" href="https://episode1.donottrack-doc.com/" title="{{ _('Watch the documentary at donottrack-doc.com.') }}" target="_blank">
+            <a class="video-open" href="https://episode1.donottrack-doc.com/" title="{{ _('Watch the documentary at donottrack-doc.com.') }}">
               {{ high_res_img('teach/smarton/tracking/donottrackdoc-poster.jpg', {'alt': _('Watch the documentary at donottrack-doc.com.'), 'width': '620', 'height': '349'}) }}
             </a>
           </p>
