--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/joy-of-coding.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/joy-of-coding.html
@@ -29,7 +29,7 @@
           </a></p>
         {% endif %}
         <h4>{{ _('Get involved') }}</h4>
-        {{ _('<a href="%s" id="get-involved" target="_blank">Join the Coding Community</a> and start collaborating with other Mozillians around the world.')|format('https://wiki.mozilla.org/Contribute/Coding') }}
+        {{ _('<a href="%s" id="get-involved" target="_blank" rel="noopener noreferrer">Join the Coding Community</a> and start collaborating with other Mozillians around the world.')|format('https://wiki.mozilla.org/Contribute/Coding') }}
       </div>
     </li>
   </ol>
