--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/stumbler.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/stumbler.html
@@ -26,7 +26,7 @@
         }, class_name='stumbler-button', extra_img_attributes={
           'data-action': 'install', 'data-task': 'stumbler', 'data-step': 'one', 'data-complete': 'true'
         }) }}
-        <p>{{ _('<a href="%s" target="_blank">Learn more about Mozilla Location Services</a> and discover more ways to get involved.')|format('https://location.services.mozilla.com/') }}</p>
+        <p>{{ _('<a href="%s" target="_blank" rel="noopener noreferrer">Learn more about Mozilla Location Services</a> and discover more ways to get involved.')|format('https://location.services.mozilla.com/') }}</p>
       </div>
     </li>
   </ol>
