--- a/bedrock/mozorg/templates/mozorg/contribute/tasks/taskview-base.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/tasks/taskview-base.html
@@ -51,7 +51,7 @@
   </section>
 
   <ul class="notices">
-    <li><a href="{{ url('mozorg.contact.communities.communities-landing') }}" id="communities" target="_blank">{{ _('Find your local Mozilla community.') }}</a></li>
+    <li><a href="{{ url('mozorg.contact.communities.communities-landing') }}" id="communities" target="_blank" rel="noopener noreferrer">{{ _('Find your local Mozilla community.') }}</a></li>
     <li>{{ _('The Mozilla newsletter is currently available in English only.') }}</li>
   </ul>
 {% endblock %}
