[fix bug 1292658] Add Mozilla Foundation strategy document to Foundation page
1. Added link to document in side panel in base-resp.html.
2. Added link to document in body in index.html.

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -32,6 +32,10 @@
   {% endtrans %}
   </p>
 
+  <p>
+    <strong><a href="https://mzl.la/foundation-strategy" class="go">{{ _('Read the Mozilla Foundation’s 2016-2018 Strategy') }}</a></strong>
+  </p>
+
   <h2>{{ _('Foundation Programs') }}</h2>
   <p>
   {% trans %}
