--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -15,6 +15,7 @@
 {% set navigation_bar = [
     (url('foundation.index'), 'index', 'The Mozilla Foundation'),
     (url('foundation.about'), 'about', 'About the Foundation'),
+    ('https://mzl.la/foundation-strategy', 'strategy', '2016-2018 Strategy'),
     (url('foundation.annualreport'), 'report', 'Annual Report'),
     ('https://careers.mozilla.org/', 'careers', 'Careers'),
     (donate_url('foundation_nav'), 'donate', 'Donate'),
