Add Mozilla Foundation strategy document to Foundation page
1. Added link to document in side panel in base-resp.html.
2. Added link to document in body in index.html.

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -32,6 +32,12 @@
   {% endtrans %}
   </p>
 
+  <p>
+    {% trans url_open_strategy_document='https://mzl.la/foundation-strategy' %}
+      <strong><a href="{{ url_open_strategy_document }}" class="go">Read the Mozilla Foundation’s 2016-2018 Strategy</a></strong>
+    {% endtrans %}
+  </p>
+
   <h2>{{ _('Foundation Programs') }}</h2>
   <p>
   {% trans %}
