Simplified link to strategy document in index.html

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -33,9 +33,7 @@
   </p>
 
   <p>
-    {% trans url_open_strategy_document='https://mzl.la/foundation-strategy' %}
-      <strong><a href="{{ url_open_strategy_document }}" class="go">Read the Mozilla Foundation’s 2016-2018 Strategy</a></strong>
-    {% endtrans %}
+    <strong><a href="https://mzl.la/foundation-strategy" class="go">{{ _('Read the Mozilla Foundation’s 2016-2018 Strategy') }}</a></strong>
   </p>
 
   <h2>{{ _('Foundation Programs') }}</h2>
