[fix bug 1293279] Add custom /whatsnew for TW & HK on Fx 49.0

--- a/bedrock/firefox/templates/firefox/whatsnew_42/base.html
+++ b/bedrock/firefox/templates/firefox/whatsnew_42/base.html
@@ -51,7 +51,7 @@
 
 {% block content %}
 <main role="main" class="container">
-  <header>
+  <header class="main-header">
     <h1 data-alt="{{ _('The world’s most private browsing. Only from Firefox.') }}">{{ self.page_title() }}</h1>
     {% block main_subhead %}{% endblock %}
   </header>
