--- a/media/css/firefox/whatsnew_42/common.less
+++ b/media/css/firefox/whatsnew_42/common.less
@@ -161,7 +161,7 @@ body {
 /*-------------------------------------------------------------------------*/
 // Main page headline and copy.
 
-main > header {
+main .main-header {
     width: 540px;
     margin: 30px auto 0;
     float: left;
